--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hong Kong Big Data</title>
+    <title>Hong Kong Big Data Events</title>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -19,8 +19,8 @@
     <div id="header"></div>
 
     <div class="container">
-      <h1>Hong Kong Big Data</h1>
-      <a href="http://hkbd.hk"><img class="img-responsive img-rounded" src="images/hk-med.jpg" alt="Hong Kong from harbor"></a>
+      <h1>Hong Kong Big Data Events</h1>
+      <p>Details coming soon.</p>
     </div> <!-- container highlights -->
 
     <!-- loaded in js -->
