--- a/partners.html
+++ b/partners.html
@@ -19,8 +19,8 @@
     <div id="header"></div>
 
     <div class="container">
-      <h1>Hong Kong Big Data</h1>
-      <a href="http://hkbd.hk"><img class="img-responsive img-rounded" src="images/hk-med.jpg" alt="Hong Kong from harbor"></a>
+      <h1>Hong Kong Big Data Partner Organizations</h1>
+      <p>Details coming soon.</p>
     </div> <!-- container highlights -->
 
     <!-- loaded in js -->
