minor changes. currently broken.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <base href="http://hkbd.hk/"> -->
+    <base href="http://localhost/~drummonds/hkbd/">
     <title>Hong Kong Big Data</title>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -19,9 +21,12 @@
     <div id="header"></div>
 
     <div class="container">
-      <h1>Hong Kong Big Data</h1>
-      <a href="http://hkbd.hk"><img class="img-responsive img-rounded" src="images/hk-med.jpg" alt="Hong Kong from harbor"></a>
-    </div> <!-- container highlights -->
+      <div class="jumbotron">
+        <h1>Hong Kong Big Data</h1>
+        <p>Hong Kong's community of big data enthusiasts.  Programmers, businesspeople, data
+        scientists, and hobbyists are all welcome.</p>
+      </div> <!-- jumbotron -->
+    </div> <!-- container -->
 
     <!-- loaded in js -->
     <div id="footer"></div>
