--- a/header.html
+++ b/header.html
@@ -1,26 +1,22 @@
 <!-- This is the header HTML that is inserted into every page using
      jQuery load(). -->
 
-<div class="container navigation">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">HKBD</a>
-      </div> <!-- navbar-header -->
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="index.html">HKBD</a>
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+  </div> <!-- navbar-header -->
 
-      <div class="navbar-collapse collapse">
-        <ul class="nav">
-          <li class="navbar-left"><a href="events.html">Events</a></li>
-          <li class="navbar-left"><a href="about.html">About</a></li>
-          <li class="navbar-left"><a href="partners.html">Partners</a></li>
-        </ul> <!-- nav navbar-nav -->
-      </div> <!-- navbar-collapse -->
-    </div> <!-- container-fluid -->
-  </div> <!-- navbar navbar-default -->
-</div> <!-- navigation header -->
+  <div class="navbar-collapse collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="events.html">Events</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="partners.html">Partners</a></li>
+    </ul> <!-- nav navbar-nav -->
+  </div> <!-- navbar-collapse collapse -->
+</nav> <!-- navbar navbar-default -->
